Fixed too small contrast ratio between colors

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  background: grey;
+  background: black;
   color: white;
 }
 
@@ -19,6 +19,6 @@ h1 {
   margin: 0;
   padding: 0;
   top: 60vh;
-  background: grey;
+  background: black;
 }
 
